--- a/src/templates/translate.html
+++ b/src/templates/translate.html
@@ -1,16 +1,28 @@
 {% extends "index.html" %}
 {% block banner %}
-<section class="banner_main">
-    <form action="/translate" method="post" enctype="multipart/form-data">
-      <input type="file" name="text_file" accept=".txt, .srt, .xml">
-      <p>Drag your files here or click in this area.</p>
-      <button type="submit">Upload</button>
-    </form>
-    {% if relink %}
-        <a id="downText" href="{{ relink }}" target="_blank"></a>
-        <script>
-            document.getElementById('downText').click();
-        </script>
-    {% endif %}
+<section class="banner_main" xmlns="http://www.w3.org/1999/html">
+    <div>
+        <form action="/translate" method="post" enctype="multipart/form-data">
+            <input id="upload_file" type="file" name="file-script" accept=".txt, .srt, .xml">
+            <p>Drag your files here or click in this area.</p>
+            <br>
+            <div>
+                {%if content %}
+                    <textarea id="inNoteCon" name="inputNote" placeholder="Translate script">{{ input }}</textarea>
+                    <textarea name="outputNote" readonly>{{ content }}</textarea>
+                {% else %}
+                    <textarea id="inNote" name="inputNote" placeholder="Translate script"></textarea>
+                    <textarea name="outputNote" placeholder="Bản dịch" readonly></textarea>
+                {% endif %}
+            </div>
+            <button type="submit">Translate</button>
+            {% if relink %}
+                <a href="{{ relink }}" target="_blank">Download</a>
+            {% else %}
+                <a>No file to Download</a>
+            {% endif %}
+        </form>
+    </div>
+
 </section>
 {% endblock %}
