--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,7 +34,7 @@
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-
+    {% block readtext %}{% endblock %}
 </head>
 <body class="main-layout">
     <div class="loader_bg">
@@ -99,6 +99,6 @@
             document.getElementById("mySidepanel").style.width = "0";
         }
     </script>
-
+    {% block ajax %}{% endblock %}
 </body>
 </html>
