--- a/src/templates/translate.html
+++ b/src/templates/translate.html
@@ -1,9 +1,76 @@
 {% extends "index.html" %}
+
+{% block readtext %}
+<script type="text/javascript">
+    var reader = new FileReader(); //GLOBAL File Reader object for demo purpose only
+
+    /**
+     * Check for the various File API support.
+     */
+    function checkFileAPI() {
+        if (window.File && window.FileReader && window.FileList && window.Blob) {
+            reader = new FileReader();
+            return true;
+        } else {
+            alert('The File APIs are not fully supported by your browser. Fallback required.');
+            return false;
+        }
+    }
+
+    /**
+     * read text input
+     */
+    function readText(filePath) {
+        var output = ""; //placeholder for text output
+        if(filePath.files && filePath.files[0]) {
+            reader.onload = function (e) {
+                output = e.target.result;
+                displayContents(output);
+            };//end onload()
+            reader.readAsText(filePath.files[0]);
+        }//end if html5 filelist support
+        else if(ActiveXObject && filePath) { //fallback to IE 6-8 support via ActiveX
+            try {
+                reader = new ActiveXObject("Scripting.FileSystemObject");
+                var file = reader.OpenTextFile(filePath, 1); //ActiveX File Object
+                output = file.ReadAll(); //text contents of file
+                file.Close(); //close file "input stream"
+                displayContents(output);
+            } catch (e) {
+                if (e.number == -2146827859) {
+                    alert('Unable to access local files due to browser security settings. ' +
+                     'To overcome this, go to Tools->Internet Options->Security->Custom Level. ' +
+                     'Find the setting for "Initialize and script ActiveX controls not marked as safe" and change it to "Enable" or "Prompt"');
+                }
+            }
+        }
+        else { //this is where you could fallback to Java Applet, Flash or similar
+            return false;
+        }
+        return true;
+    }
+
+    /**
+     * display content using a basic HTML replacement
+     */
+    function displayContents(txt) {
+        if (document.getElementById('inNote') == null){
+            document.getElementById('inNoteCon').value = txt;
+        }
+        else {
+            document.getElementById('inNote').value = txt;
+        }
+         //display output in DOM
+        document.getElementById('upload_file').value = null;
+    };
+</script>
+{% endblock %}
+
 {% block banner %}
-<section class="banner_main" xmlns="http://www.w3.org/1999/html">
+<section class="banner_main" xmlns="http://www.w3.org/1999/html" onload="checkFileAPI();">
     <div>
-        <form action="/translate" method="post" enctype="multipart/form-data">
-            <input id="upload_file" type="file" name="file-script" accept=".txt, .srt, .xml">
+        <form action="/translate" method="post" enctype="multipart/form-data" name="form-translation">
+            <input id="upload_file" onchange="readText(this)" type="file" name="file-script" accept=".txt, .srt, .xml">
             <p>Drag your files here or click in this area.</p>
             <br>
             <div>
@@ -17,7 +84,7 @@
             </div>
             <button type="submit">Translate</button>
             {% if relink %}
-                <a href="{{ relink }}" target="_blank">Download</a>
+                <a id="downlink" href="{{ relink }}" target="_blank">Download</a>
             {% else %}
                 <a>No file to Download</a>
             {% endif %}
@@ -26,3 +93,22 @@
 
 </section>
 {% endblock %}
+<!--{% block ajax %}-->
+<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+<!--<script>-->
+<!--var bar = document.getElementById("downlink");-->
+
+<!--$.ajax({-->
+<!--  url: "/translation",-->
+<!--  type: "get",-->
+<!--  success: function(response) {-->
+<!--      console.log(response)-->
+<!--    bar.href = response;-->
+<!--   },-->
+<!--  error: function(xhr) {-->
+<!--      //Handel error-->
+<!--  }-->
+<!--});-->
+
+<!--</script>-->
+<!--{% endblock %}-->
