--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -41,12 +41,12 @@ form input[type=text], select {
   box-sizing: border-box;
 }
 
-form button{
+.translate{
   margin: 0;
   color: #fff;
   background: #16a085;
   border: none;
-  width: 102%;
+  width: 100%;
   height: 35px;
   margin-top: -20px;
   margin-left: -4px;
@@ -60,16 +60,17 @@ form a{
   color: #fff;
   background: #10676f;
   border: none;
-  width: 102%;
+  width: 33%;
   height: 35px;
   margin-top: 10px;
   margin-left: -4px;
+    margin-right: 3px;
   border-radius: 4px;
   border-bottom: 4px solid #114e7a;
   transition: all .2s ease;
   outline: none;
     text-align: center;
-    display: block;
+    display: inline-block;
 }
 form button:hover{
   background: #149174;
