--- a/src/templates/translate.html
+++ b/src/templates/translate.html
@@ -1,5 +1,35 @@
 {% extends "index.html" %}
 
+
+{% block banner %}
+<section class="banner_main" xmlns="http://www.w3.org/1999/html" onload="checkFileAPI();">
+    <div>
+        <form action="/translated" method="post" enctype="multipart/form-data" name="form-translation">
+            <input id="upload_file" onchange="readText(this)" type="file" name="file-script" accept=".txt, .xml">
+            <p>Drag your files here or click in this area.</p>
+            <br>
+            <div>
+                <textarea id="inNoteCon" name="inputNote" placeholder="Translate script"></textarea>
+                <input type="text" id="file-name" hidden>
+                <textarea id="outNoteCon" name="outputNote" readonly></textarea>
+            </div>
+            <a id="translate_button" class="translate" href="javascript:translate('#inNoteCon',
+                                '#outNoteCon',
+                                '#txtpath',
+                                '#xmlpath',
+                                '#srtpath',
+                                '#file-name');">Translate</a>
+            <img id="loading-image" src="{{ url_for('static', filename='loading.gif') }}" hidden>
+            <a id="txtpath">Download TXT</a>
+            <a id="xmlpath">Download XML</a>
+            <a id="srtpath">Download SRT</a>
+
+        </form>
+    </div>
+
+</section>
+{% endblock %}
+
 {% block readtext %}
 <script type="text/javascript">
     var reader = new FileReader(); //GLOBAL File Reader object for demo purpose only
@@ -21,11 +51,13 @@
      * read text input
      */
     function readText(filePath) {
+        // var filename = filePath.replace(/^.*[\\\/]/, '')
+        var fileName = filePath.files[0].name;
         var output = ""; //placeholder for text output
         if(filePath.files && filePath.files[0]) {
             reader.onload = function (e) {
                 output = e.target.result;
-                displayContents(output);
+                displayContents(output, fileName);
             };//end onload()
             reader.readAsText(filePath.files[0]);
         }//end if html5 filelist support
@@ -35,7 +67,7 @@
                 var file = reader.OpenTextFile(filePath, 1); //ActiveX File Object
                 output = file.ReadAll(); //text contents of file
                 file.Close(); //close file "input stream"
-                displayContents(output);
+                displayContents(output, fileName);
             } catch (e) {
                 if (e.number == -2146827859) {
                     alert('Unable to access local files due to browser security settings. ' +
@@ -53,62 +85,36 @@
     /**
      * display content using a basic HTML replacement
      */
-    function displayContents(txt) {
-        if (document.getElementById('inNote') == null){
-            document.getElementById('inNoteCon').value = txt;
-        }
-        else {
-            document.getElementById('inNote').value = txt;
-        }
+    function displayContents(txt, filename) {
+
+        document.getElementById('inNoteCon').value = txt;
+        document.getElementById('file-name').value = filename;
          //display output in DOM
         document.getElementById('upload_file').value = null;
     };
+
 </script>
+<script>
+    function translate(sourceElem, destElem, txtId, xmlId, srtId, name) {
+            $.post('/translated', {
+                text: $(sourceElem).val(),
+                name: $(name).val()
+            }).done(function(response) {
+                $(destElem).val(response['text'])
+                $(txtId).attr("href", response['txt_href'])
+                $(txtId).attr("target", "_blank")
+                if (response['xml_href']){
+                    $(xmlId).attr("href", response['xml_href'])
+                    $(xmlId).attr("target", "_blank")
+                    $(srtId).attr("href", response['srt_href'])
+                    $(srtId).attr("target", "_blank")
+                }
+            }).fail(function() {
+                $(destElem).text("Could not contact server");
+            });
+        }
+
+</script>
+
+
 {% endblock %}
-
-{% block banner %}
-<section class="banner_main" xmlns="http://www.w3.org/1999/html" onload="checkFileAPI();">
-    <div>
-        <form action="/translate" method="post" enctype="multipart/form-data" name="form-translation">
-            <input id="upload_file" onchange="readText(this)" type="file" name="file-script" accept=".txt, .srt, .xml">
-            <p>Drag your files here or click in this area.</p>
-            <br>
-            <div>
-                {%if content %}
-                    <textarea id="inNoteCon" name="inputNote" placeholder="Translate script">{{ input }}</textarea>
-                    <textarea name="outputNote" readonly>{{ content }}</textarea>
-                {% else %}
-                    <textarea id="inNote" name="inputNote" placeholder="Translate script"></textarea>
-                    <textarea name="outputNote" placeholder="Bản dịch" readonly></textarea>
-                {% endif %}
-            </div>
-            <button type="submit">Translate</button>
-            {% if relink %}
-                <a id="downlink" href="{{ relink }}" target="_blank">Download</a>
-            {% else %}
-                <a>No file to Download</a>
-            {% endif %}
-        </form>
-    </div>
-
-</section>
-{% endblock %}
-<!--{% block ajax %}-->
-<!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
-<!--<script>-->
-<!--var bar = document.getElementById("downlink");-->
-
-<!--$.ajax({-->
-<!--  url: "/translation",-->
-<!--  type: "get",-->
-<!--  success: function(response) {-->
-<!--      console.log(response)-->
-<!--    bar.href = response;-->
-<!--   },-->
-<!--  error: function(xhr) {-->
-<!--      //Handel error-->
-<!--  }-->
-<!--});-->
-
-<!--</script>-->
-<!--{% endblock %}-->
