add recognize to web

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -23,7 +23,7 @@
                         <div class="text-bg">
                             <h1>software</h1>
                             <span>Maker</span>
-                            <a class="read_more" href="/recognition">Recognize some audio</a>
+                            <a class="read_more" href="/recognize">Recognize some audio</a>
                         </div>
                     </div>
                 </div>
