--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -98,6 +98,6 @@
             document.getElementById("mySidepanel").style.width = "0";
         }
     </script>
-    {% block readtext %}{% endblock %}
+    {% block jscode %}{% endblock %}
 </body>
 </html>
