--- a/src/templates/translate.html
+++ b/src/templates/translate.html
@@ -13,7 +13,7 @@
                 <input type="text" id="file-name" hidden>
                 <textarea id="outNoteCon" name="outputNote" readonly></textarea>
             </div>
-            <a id="translate_button" class="translate" href="javascript:translate('#inNoteCon',
+            <a id="translate_button" class="start-bar" href="javascript:translate('#inNoteCon',
                                 '#outNoteCon',
                                 '#txtpath',
                                 '#xmlpath',
