--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -41,15 +41,16 @@ form input[type=text], select {
   box-sizing: border-box;
 }
 
-.translate{
+.start-bar{
   margin: 0;
   color: #fff;
   background: #16a085;
   border: none;
-  width: 100%;
+  width: 101%;
   height: 35px;
   margin-top: -20px;
   margin-left: -4px;
+    margin-bottom: 2px;
   border-radius: 4px;
   border-bottom: 4px solid #117A60;
   transition: all .2s ease;
@@ -100,4 +101,14 @@ form textarea[name="outputNote"]{
     background-color: #8c8c8c;
 }
 
+form textarea[name="audio-output"]{
+    width: 100%;
+    height: 300px;
+    margin-left: 1px;
+    font-family: Arial, sans-serif;
+    font-size: medium;
+    display: inline;
+    color: black;
+    background-color: #8c8c8c;
+}
 
