Restructure project code

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -23,7 +23,7 @@
                         <div class="text-bg">
                             <h1>software</h1>
                             <span>Maker</span>
-                            <a class="read_more" href="/recognize">Recognize some audio</a>
+                            <a class="read_more" href="/recognize">Recognize</a>
                         </div>
                     </div>
                 </div>
@@ -36,5 +36,51 @@
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
     </div>
+</section>
+<section>
+<div id="we_Do" class="we_do">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="titlepage">
+                    <h2>What We Do</h2>
+                    <p>An automatic subtitles </p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div id="hover_color_translate" class="we_box">
+                    <span>1</span>
+                    <h3>Software Maker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="hover_color_recognize" class="we_box">
+                    <span>1</span>
+                    <h3>Expense Management Maker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut </p>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div id="hover_color_extension" class="we_box">
+                    <span>1</span>
+                    <h3>Group Revenue <br> Maker</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut </p>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <a class="read_more" href="#">Read More</a>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 {% endblock %}
