--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -46,15 +46,18 @@ form input[type=text], select {
   color: #fff;
   background: #16a085;
   border: none;
-  width: 101%;
+  width: 49%;
   height: 35px;
   margin-top: -20px;
   margin-left: -4px;
+    margin-right: 10px;
     margin-bottom: 2px;
   border-radius: 4px;
   border-bottom: 4px solid #117A60;
   transition: all .2s ease;
   outline: none;
+    text-align: center;
+    display: inline-block;
 }
 
 form a{
