--- a/src/templates/recognize.html
+++ b/src/templates/recognize.html
@@ -8,11 +8,16 @@
             <input id="upload_audio" type="file" name="audio-file" accept=".mp3, .m4a, .mp4, .wav">
             <p>Drag your audio file here or click in this area.</p>
             <br>
-            <a id="recognize_button" class="start-bar" href="javascript:recognize('#upload_audio',
-                                '#reg-output',
-                                '#txtpath',
-                                '#xmlpath',
-                                '#srtpath');">Recognized</a>
+            <div id="button_recognize">
+                <a id="recognize" class="start-bar" href="javascript:recognize('#upload_audio',
+                                    '#reg-output',
+                                    '#txtpath',
+                                    '#xmlpath',
+                                    '#srtpath');">Recognized</a>
+            </div>
+            <div id="loading">
+                <img class="center" id="loading-image" src="{{ url_for('static', filename='loading.gif') }}">
+            </div>
             <br>
             <textarea id="reg-output" name="audio-output" placeholder="Output script: " readonly></textarea>
 
@@ -20,81 +25,23 @@
             <a id="xmlpath">Download XML</a>
             <a id="srtpath">Download SRT</a>
         </form>
-<!--        <button id="start-record-audio">Start</button>-->
-<!--        <button id="stop-record-audio">Stop</button>-->
-<!--        <audio id="audio-play" controls></audio>-->
     </div>
 </section>
 
 
 {% endblock %}
 
-
 {% block jscode %}
-
-<!--<script>-->
-<!--    console.log('hello');-->
-<!--    let audioIN = {audio: true};-->
-
-<!--    navigator.mediaDevices.getUserMedia(audioIN)-->
-
-<!--        .then(function (mediaStreamObj) {-->
-
-<!--            let audio = document.querySelector('audio');-->
-
-<!--            if ("srcObject" in audio) {-->
-<!--                audio.srcObject = mediaStreamObj;-->
-<!--            } else {-->
-<!--                audio.src = window.URL-->
-<!--                    .createObjectURL(mediaStreamObj);-->
-<!--            }-->
-
-<!--            audio.onloadedmetadata = function (ev) {-->
-
-<!--                audio.play();-->
-<!--            };-->
-
-<!--            let start = document.getElementById('start-record-audio');-->
-
-<!--            let stop = document.getElementById('stop-record-audio');-->
-
-<!--            let playAudio = document.getElementById('audio-play');-->
-
-<!--            let mediaRecorder = new MediaRecorder(mediaStreamObj);-->
-
-<!--            start.addEventListener('click', function (ev) {-->
-<!--                mediaRecorder.start();-->
-<!--            })-->
-
-<!--            stop.addEventListener('click', function (ev) {-->
-<!--                mediaRecorder.stop();-->
-<!--            });-->
-
-
-<!--            mediaRecorder.ondataavailable = function (ev) {-->
-<!--                dataArray.push(ev.data);-->
-<!--            }-->
-
-<!--            let dataArray = [];-->
-
-
-<!--            mediaRecorder.onstop = function (ev) {-->
-
-<!--                let audioData = new Blob(dataArray,-->
-<!--                    {'type': 'audio/mp3;'});-->
-<!--                dataArray = [];-->
-<!--                let audioSrc = window.URL-->
-<!--                    .createObjectURL(audioData);-->
-
-<!--                playAudio.src = audioSrc;-->
-<!--            }-->
-<!--        })-->
-
-<!--        .catch(function (err) {-->
-<!--            console.log(err.name, err.message);-->
-<!--        });-->
-<!--</script>-->
 <script>
+    $(document).ready(function () {
+    $(document).ajaxStart(function () {
+        $("#loading").show();
+        $("#button_recognize").hide();
+    }).ajaxStop(function () {
+        $("#loading").hide();
+        $("#button_recognize").show();
+    });
+});
     function recognize(sourceElem, destElem, txtId, xmlId, srtId) {
             var audio = $(sourceElem).prop('files')[0];
             var formData = new FormData();
@@ -114,6 +61,9 @@
                     $(xmlId).attr("target", "_blank")
                     $(srtId).attr("href", response['srt_href'])
                     $(srtId).attr("target", "_blank")
+                },
+                error: function() {
+                    $(destElem).attr("placeholder", "Invalid audio file");
                 }
             })
         }
