--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,6 +1,7 @@
 body{
   background: rgba(0,0,0,0.9);
 }
+
 form{
   position: static;
   top: 15%;
@@ -46,7 +47,7 @@ form input[type=text], select {
   color: #fff;
   background: #16a085;
   border: none;
-  width: 49%;
+  width: 100%;
   height: 35px;
   margin-top: -20px;
   margin-left: -4px;
@@ -115,3 +116,29 @@ form textarea[name="audio-output"]{
     background-color: #8c8c8c;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+    max-height: 37px;
+    max-width: 37px;
+}
+
+.translate-intro{
+  color: #fff;
+  font-family: Arial;
+  font-size: 10px;
+  text-align: center;
+  margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+form textarea[name="url_input"]{
+    width: 100%;
+    height: 40px;
+    margin-left: 1px;
+    font-family: Arial, sans-serif;
+    font-size: medium;
+    display: inline;
+}
