--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,6 +5,7 @@
         <ol class="carousel-indicators">
             <li data-target="#banner1" data-slide-to="0" class="active"></li>
             <li data-target="#banner1" data-slide-to="1"></li>
+            <li data-target="#banner1" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -24,6 +25,17 @@
                             <h1>software</h1>
                             <span>Maker</span>
                             <a class="read_more" href="/recognize">Recognize</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="container">
+                    <div class="carousel-caption">
+                        <div class="text-bg">
+                            <h1>software</h1>
+                            <span>Maker</span>
+                            <a class="read_more" href="/tubescribe">Tubescribe</a>
                         </div>
                     </div>
                 </div>
