--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,12 +62,12 @@
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col logo_section">
-                        <div class="full">
-                            <div class="center-desk">
-                                <div class="logo">
-                                    <a href="index.html"><img src="../static/images/logo.png" alt="#"/></a>
-                                </div>
+                        <div>
+
+                            <div class="logo">
+                                <a href="/"><img style="border-radius: 10%;" src="../static/images/our_logo.png" alt="#"/></a>
                             </div>
+
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
