fix templates, add notes and images

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -64,32 +64,26 @@
             <div class="col-md-4">
                 <div id="hover_color_translate" class="we_box">
                     <span>1</span>
-                    <h3>Software Maker</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut </p>
+                    <h3>Translate</h3>
+                    <p>We are using the best VietAI's model in Vietnamese - English translation task. The result is better
+                        than Google translate. You also can use our model to translate your own subtitles file.
+                        </p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div id="hover_color_recognize" class="we_box">
-                    <span>1</span>
-                    <h3>Expense Management Maker</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut </p>
+                    <span>2</span>
+                    <h3>Recognize</h3>
+                    <p>Combine of the enhanced audio model with state of the art in speech recognition, Wav2Vec2,
+                        our website can quickly get scripts from audio file with the most reliable outcome</p>
                 </div>
             </div>
             <div class="col-md-4">
                 <div id="hover_color_extension" class="we_box">
-                    <span>1</span>
-                    <h3>Group Revenue <br> Maker</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut </p>
+                    <span>3</span>
+                    <h3>SUB IT!</h3>
+                    <p>An application to extract files transcript from Youtube's videos</p>
                 </div>
-            </div>
-            <div class="col-md-12">
-                <a class="read_more" href="#">Read More</a>
             </div>
         </div>
     </div>
