--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -47,8 +47,7 @@
         <a href="/">Home</a>
         <a href="/recognize">Recognition</a>
         <a href="/translate">Translation</a>
-        <a href="/extensions">Chrome Extension</a>
-        <a href="/about">About Us</a>
+        <a href="/tubescribe">SUB IT!</a>
     </div>
     <!-- header -->
     <header>
