--- a/src/templates/tubescribe.html
+++ b/src/templates/tubescribe.html
@@ -16,7 +16,7 @@
             <div id="loading">
                 <img class="center" id="loading-image" src="{{ url_for('static', filename='loading.gif') }}">
             </div>
-            <a style="width: 100%;display: block; margin-left: auto; margin-right: auto;" id="srtpath">Download SRT</a>
+            <a style="width: 100%;display: block; margin-left: auto; margin-right: auto; margin-top: 10px;" id="srtpath">Download SRT</a>
         </form>
     </div>
 </section>
