--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -65,8 +65,8 @@
                 <div id="hover_color_translate" class="we_box">
                     <span>1</span>
                     <h3>Translate</h3>
-                    <p>We are using the best VietAI's model in Vietnamese - English translation task. The result is better
-                        than Google translate. You also can use our model to translate your own subtitles file.
+                    <p>We are using a model which generate better result in comparison with 
+                        Google translate. You can use our model to translate your own subtitles file.
                         </p>
                 </div>
             </div>
