--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -12,7 +12,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <div class="text-bg">
-                            <img src="../static/images/translate.png">
+                            <img style="width: 500px; height: 300px; border-radius: 10%" src="../static/images/translate2.png">
                             <a class="read_more" href="/translate">Translate</a>
                         </div>
                     </div>
@@ -22,8 +22,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <div class="text-bg">
-                            <h1>software</h1>
-                            <span>Maker</span>
+                            <img style="width: 500px; height: 300px; border-radius: 10%" src="../static/images/recognize.png">
                             <a class="read_more" href="/recognize">Recognize</a>
                         </div>
                     </div>
@@ -33,8 +32,7 @@
                 <div class="container">
                     <div class="carousel-caption">
                         <div class="text-bg">
-                            <h1>software</h1>
-                            <span>Maker</span>
+                            <img style="width: 500px; height: 300px; border-radius: 10%" src="../static/images/tubescribe.png">
                             <a class="read_more" href="/tubescribe">Tubescribe</a>
                         </div>
                     </div>
@@ -47,6 +45,7 @@
         <a class="carousel-control-next" href="#banner1" role="button" data-slide="next">
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
         </a>
+        <br>
     </div>
 </section>
 <section>
