--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -110,10 +110,10 @@ form textarea[name="audio-output"]{
     height: 300px;
     margin-left: 1px;
     font-family: Arial, sans-serif;
-    font-size: medium;
+    font-size: large;
     display: inline;
     color: black;
-    background-color: #8c8c8c;
+    background-color: #ffffff;
 }
 
 .center {
