--- a/src/templates/tubescribe.html
+++ b/src/templates/tubescribe.html
@@ -14,7 +14,7 @@
                                     '#srtpath');">SUB IT!</a>
             </div>
             <div id="loading">
-                <img class="center" id="loading-image" src="{{ url_for('static', filename='loading.gif') }}">
+                <img class="center" id="loading-image" src="{{ url_for('static', filename='images/infinity.gif') }}">
             </div>
             <a style="width: 100%;display: block; margin-left: auto; margin-right: auto; margin-top: 10px;" id="srtpath">Download SRT</a>
         </form>
