--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Kiet page">
     <meta name="description" content="My first html page">
-    <title>My first Web page</title>
+    <title>Sub it</title>
     <link rel="stylesheet" href="../static/css/main.css" type="text/css">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
